updates posts on etika bergaul islam

--- a/salaf/etika-pergaulan-islam/index.html
+++ b/salaf/etika-pergaulan-islam/index.html
@@ -51,6 +51,18 @@
 
 <p id="permalink" class="print-only">http://saifulindo.github.io/salaf/etika-pergaulan-islam/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Oct 24, 2014</span></p><p class="print-only created_at dateline">Published: <span>Oct 24, 2014</span></p>
+<h3><span id="etika_kepada_orang_tua">Etika Kepada Orang Tua</span></h3>
+<ol type="a">
+	<li>Mentaati semua perintahnya selama tidak bertentangan dengan ajaran islam</li>
+	<p>Allah ta’ala berfirman (artinya): <i>Dan kami wajibkan kepada manusia untuk (berbuat ) baik kepada kedua orang tuanya. Namun keduanya memaksamu untuk (berbuat syirik) mempersekutukan Aku dengan sesuatu yang tidak ada pengetahuanmu tentang itu, maka janganlah kamu menaatinya.</i> (QS. al-Ankabut[29]:8)</p>
+	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda: “<i>Tidak boleh taat dalam kemaksiatan, taat itu hanya boleh dalam kebaikan.</i>” (HR. Al-Bukhari:6830)</p>
+	<li>Merendahkan diri di hadapan orang tua</li>
+	<p>Allah ta’ala brfirman (artinya): <i>Dan rendahkanlah dirimu terhadap mereka berdua dengan penuh kesayangan dan ucapkanlah:”Wahai Rabbku, kasihilah mereka berdua sebagaimana mereka telah mendidik aku waktu kecil.</i>” (QS. al-Isra’[17]:24)</p>
+	<li>Bertutur kata lemah lembut kepada orang tua, terutama saat mereka telah lanjut usia</li>
+	<p>Allah ta’ala berfirman (artinya):  <i>Jika salah seorang diantara keduanya atau keduanya sampa berumur lanjut dalam pemeliharaanmu, maka sekali-kali janganlahlah kamu mengatakan kepada keduanya perkataan “ah”, dan janganlah kamu membenetak mereka, namun ucapkanlah kepada mereka perkataan yang mulia.</i> (QS. al-Isra’[17]:23)</p>
+	<li>Mencurahkan bakti kepada ibu lebih besar daripada kepada ayah</li>
+	<p>Seorang lelaki bertanya kepada Nabi shallallahu ‘alaihi wa sallam: “<i>Wahai Rasulullah shallallahu ‘alaihi wa sallam, siapakah yang paling berhak mendapat perlakuan baik dariku?’ Beliau menjawab: “Ibumu.” Lelaki itu bertanya lagi, ‘Kemudian siapa lagi?’ Beliau kembali menjawab, “Ibumu.” Lelaki itu kembali bertanya, ‘Kemudian siapa lagi?’ Beliau menjawab, “Ibumu.” ‘Lalu siapa lagi?’ Tanyanya. “Ayahmu,” Jawab Bliau.</i>” (HR. Al-Bukhari:5626 dan Muslim: 2548)</p>
+</ol>
 <h3><span id="etika_murid_terhadap_guru">Etika Murid Terhadap Guru</span></h3>
 <ol type="a">
 	<li>Tawadhu’ dan merendahkan diri di hadapan guru</li>
@@ -71,12 +83,78 @@
 	<li>Tidak memotong penjelasan guru</li>
 	<p>Memotong penjelasan guru merupakan adab yang tidak baik. Seorang murid hendaknya mendengarkan dengan baik apa yang dijelaskan olh gurunya. Jika guru tersebut selesai dari penjelasanya, maka silakan murid bertanya atau mengomentari apa yang dijelaskan guru.</p>
 </ol>
+<h3><span id="etika_bergaul_teman">Etika bergaul dengan teman</span></h3>
+<ol type="a">
+	<li>Berteman karena agamanya</li>
+	<p>Jadikan agama sebagai patokan dalam memilih teman. Jika agamanya baik, maka jaikanlah sebagai teman. Namun jika agamanya jelek, maka jangan jadikan sebagai teman. Mengapa demikian? Karena kualitas agama seseorang akan sangat berpengaruh pada temannya.<br>Nabi shallallahu ‘alaihi wa sallam bersabda: “<i>seseorang sangat dipengaruhi olh agama teman dekatnya. Maka hendaklah kalian benar-benar memperhatikan siapa yang hendak ia jadikan sebagai teman dkat.</i>” (HR. Abu Dawud: 4833, sh-Shahihah: 927)</p>
+	<li>Mengungkapkan rasa cinta karena Allah</li>
+	<p>Jika ingin mempererat hubungan dengan orang yang Anda cintai, ungkapkanlah rasa cinta itu kepadanya. Selain bernilai pahala, hal itu juga akan melanggengkan dan memprdalam hubungan Anda brdua.<br>
+	Nabi shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>jika seseorang diantara kalian mencintai saudaranya, hendaknya ia mengungkapkan rasa cintanya itu kepadanya, karena hal itu lebih melanggengkan persahabatan dan memprdalam raasa cinta.</i>” (Hadits hasan riwayat Ibnu Abi Dunya dalam al-Ikhwan: 69, lihat Shahih wa Dha’if al-Jami’ ash-Shaghir wa Ziyadatuhu:280)<br>
+	Dalam riwayat lain disebutkan: “<i>Jika seseorang di antara kalian mencintai saudaranya, hendaknya ia mendatangi rumahnya lalu memberitahukan bahwa ia mencintainya karena Allah.</i>” (HR. Ahmad: 21294, ash-Shahihah:797)<br>
+	Anas bin Malik radhiallahu ‘anhu bahwa ia brcerita: pada suatu hari, sseorang lelaki sedang duduk disisi Nabi shallallahu ‘alaihi wa sallam, maka lewatlah sesorang dihadapannya lalu ia berkata, “Wahai Rasulullah, sungguh saya mencintai lelaki yang baru saja lewat.” Maka Nabi shallallahu ‘alaihi wa sallam bertanya, “Apakah engkau sudah mengungkapkannya rasa cintamu itu kepadanya?” Dia berakata, “Belum.” Nabi shallallahu ‘alaihi wa sallam berkata, “Ungkapkanlah!.” Maka dia bergegas menemui lelaki itu lalu berkata:</p>
+	<blockquote>
+		<p>
+			<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;">إِنِّي أُحِبُّكَ فِي اللهِ</div>
+		</p>
+		<p>“Sungguh, aku benar-benar mncintaimu karena Allah.”<br></p>
+	</blockquote>
+	<p>Maka lelaki itu membalas:</p>
+	<blockquote>
+		<p>
+			<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;">أَحَبَّكَ الَّذِي أَحْبَبْتَنِي لَهُ</div>
+		</p>
+		<p>“Semoga engkau dicintai oleh Dzat yang engkau mncintaiku karenanya (yaitu Allah).”(HR. Ahmad: 12430, ash-Shahihah:418)</p>
+	</blockquote>
+	<li>Membantunya ketika butuh bantuan</li>
+	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Barangsiapa yang membantu saudaranya yang membutuhkan maka Allah akan membantunya. Dan barangsiapa yang melepaskan kesulitan saudaranya, maka Allah akan melepaskan kesulitannya pada hari kiamat kelak.</i>”(HR. al-BukhariL2442 dan Muslim:2580)</p>
+	<i>Mengingatkannya ketika salah</i>
+	<p>Allah subhanahu wa ta’ala berfirman (artinya): <i>Dan orang-orang yang beriman, lelaki dan permpuan, sebagian mereka (adalah) menjadi penolong bagi sebagian yang lain. Mereka menyuruh (mengerjakan) yang ma’ruf dan mencegah dari yang mungkar.</i>(QS. At-Tubah[9]:71)</p>
+	<i>Menutupi aibnya dan tidak membuka rahasianya</i>
+	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Barangsiapa menutupi aib seseorang mukmin, maka Allah akan menutupi aibnya di dunia dan di akhirat.</i>”(HR. Ibnu Majah:2544, Shahihah Ibnu Majah:2062)</p>
+	<i>Menunaikan enam haknya yang wajib</i>
+	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Hak muslim atas muslim yang lain ada enam.” Ada yang bertanya, ‘Apa sajakan itu, wahai Rasululla?’ Beliau menjawab, “(1) Bila kamu bertemu dengannya maka ucapkanlah salam kepadanya, (2) bila ia mengundangmu maka penuhilah, (3) bila ia meminta nasihat kepadamu maka berilah ia nasihat, (4) bila ia bersin lalu mengucapkan ‘Alhamdulillah’ maka ucapkanlah ‘yarhamukallah’, (5) bila ia sakit maka jenguklah, (6) dan bila ia meninggal maka antarlah jenazahnya.</i>”(HR. Muslim: 2162)[.]</p>
+</ol>
+<h3><span id="etika_seorang_guru">Etika seorang guru atau orang yang berilmu</span></h3>
+<ol type="a">
+	<li>Ikhlas ketika mengajarkan ilmu</li>
+	<p>Dalam suatu hadits Rasulullah shallallahu ‘alaihi wa sallam menjelaskan akibat perbuatan tidak ikhlas: “<i>sesungguhnya golongan manusia yang pertama kali diadili pada hari kiamat kelak ialah: .... dan orang yang belajar ilmu agama lalu mngajarkannya, bahkan telah menghafal al-Qur’an. Lalu ia didatangkan,  dan dinampakkan nikmat itu kepadanya dan ia pun mengenalinya. Lalu Allah tanya: ‘Apa yang kamu kerjakan dengan nikmat itu?’ orang itu menjawab: ‘aku telah menuntut ilmu agama dan mengajarkannya, dan juga telah menghafal al-Qur’an, (semua itu) demi engkau.’ Allah membantah: ‘Engkau dusta! Sesungguhnya engkau belajar ilmu agama agar dikatakan sebagai orang ‘alim, dan engkau menghafal al-Qur’an agar dikatakan sebagai penghafal al-Qur’an, dan semua itu telah kau dapatkan.’ Lalu diperintahkan agar ia diseret dengan wajah tersungkur lalu dilemparkan ke dalam neraka ....</i>” (HR. Muslim:1905)</p>
+	<li>Bersikap tawadhu’</li>
+	<p>Sikap tawadhu’ merupakan salah satu kunci keberhasilan menyampaikan ilmu. Allah subhanahu wa ta’ala berfirman :</p>
+	<blockquote>
+		<p>
+			<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;">وَاخْفِضْ جَنَا حَكَ لِمَنِ اتَّبَعَكَ مِنْ الْمُؤْمِنِينَ</div>
+		</p>
+		Dan bersikap tawadhu’lah kamu terhadap orang-orang yang mengikutimu dari orang-orang yang beriman. (QS. Asy-Syu’ara’[26]:215)
+		<p>
+		</p>
+	</blockquote>
+	<li>Mengamalkan ilmu yang dimiliki</li>
+	<p>Inilah keuntungan orang yang berilmu, yaitu beramal atas dasar ilmu. Namun jika ilmu yang dimiliki ternyata brtentangan dengan amalnya maka akan menimbulkan kerugian baginya. Allah subhanahu wa ta’ala berfirman :</p>
+	<blockquote>
+		<p>
+			<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;">	يَاأَيُّهَا الَّذِينَ آمَنُوا لِمَ تَقُو لُونَ مَالاَتَفْعَلُونَ. كَبُرَمَقْتًا عِنْدَاللهِ أَنْ تَقُو لُوا مَالاَتَفْعَلُونَ</div>
+		</p>
+		<p>Hai orang-orang yang beriman, mengapa kamu mengatakan apa yang tidak kamu perbuat? Amat besar kebencian Allah ketika kamu mengatakan apa-apa yang tidak kamu kerjakan. (QS. Ash-Shaf[61]:2-3)</p>
+	</blockquote>
+	<li>Tidak bakhil dengan ilmunya</li>
+	<p>Allah subhanahu wa ta’ala berfirman (artinya): Dan (ingatlah), ketika Allah menga,bil janji dari orang-orang yang telah diberi kitab (yaitu): “<i>Hendaklah kamu menrengakan isi kitab itu kepada manusia, dan jangan kamu menyembunyiknnya.</i>” (QS. Ali Imron[3]:187)</p>
+	<p>Rasulullah shallallahu ‘alaihi wa sallam mengancam orang yang bakhil dengan ilmunya dalam sabdanya:</p>
+	<blockquote>
+		<p>
+			<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;">مَنْ سُئِلَ عَنْ عِلْمٍ فَكَتَمَهُ أَلْجَمَهُ اللهُ بِلِجَامٍ مِنْ نَارٍيَوْمَ الْقِيَمَةِ</div>
+		</p>
+		<p>“Barangsiapa ditanya tentang ilmu(agama) lalu ia mnyembunyikannya, maka kelak hari kiamat Allah akan mengikatnya dengan tali kekang dari api neraka.”(HR. Abu Dawud: 3660, Shahih at-Targhib:120)</p>
+	</blockquote>
+	<li>Lemah lembut kepada para murid</li>
+	<p>Dengan sifat lemah lembut inilah Rasulullah shallallahu ‘alaihi wa sallam berhasil mendidik para muridnya dengan keberhasilan yang luar biasa. Allah subhanahu wa ta’ala menceritakan (artinya): <i>Maka disebabkan rahmat dari Allah-lah kamu berlaku lemah lembut terhadap mereka. Sekiranya kamu bersikap keras lagi berhati kasar, tentulah mereka menjauhkan diri dari sekelilingmu</i>. (QS. Ali Imron[3]:159)<br> Beliau shallallahu ‘alaihi wa sallam menerangkan fadah dari sikap lemah lembut ini dalam sabdanya: “<i>Sesungguhnya tidaklah sifat lemah lembut itu ada pada diri seseorang kecuali pasti akan menghiasinya, dan tidaklah dicabut dari diri seseorang kecuali pasti memburukkannya.</i>”(HR. Muslim:2594)
+</p>
+</ol>
 
 <h3>Catatan Penulis</h3>
-<p>Bukan bermaksud guru ingin dihormati bukan, akan tetapi yang demikian itu perintah agama, seandainya kalian berat melakukan ini paling tidak kalian itu memiliki adab kepada semua manusia, agama ini bukan sekedar memerintahkan untuk memiliki etika kepada guru, akan tetapi agama ini memerintah kepada seorang muslim itu memiliki etika kepada orang tua, guru, teman, tetangga, dan semua manusia, dan ini merupakan bentuk untuk meraih sifat tawadhu' dan meraih faedah ilmu yang luas.</p>
+<p>Bukan bermaksud guru ingin dihormati bukan, akan tetapi yang demikian itu perintah agama, seandainya kalian berat melakukan ini paling tidak kalian itu memiliki adab kepada semua manusia, agama ini bukan sekedar memerintahkan untuk memiliki etika kepada guru, akan tetapi agama ini memerintah kepada seorang muslim itu memiliki etika kepada orang tua, guru, teman, tetangga, dan semua manusia, dan ini merupakan bentuk untuk meraih sifat tawadhu' dan meraih faedah ilmu yang luas.<br>Masih banyak etika atau adab yang belum di sertakan dalam artikel ini seperti etika bergaul dengan tetangga, etika istri bergaul dengan suaminya, etika suami bergaul dengan dengan istrinya, etika seorang pemimpin, etika seorang pegawai, dan etika bergaul dengan pembantu atau pekerja.</p>
 
 <h3>Sumber :</h3>
-<p>kalenderpubliser.</p>
+<p>Majelis Ilmu publisher – dikoreksi oleh: Ustadz Arif Fathul Ulum</p>
 
 </div>
 
