fixed curent posts

--- a/salaf/etika-pergaulan-islam/index.html
+++ b/salaf/etika-pergaulan-islam/index.html
@@ -55,7 +55,7 @@
 <ol type="a">
 	<li>Mentaati semua perintahnya selama tidak bertentangan dengan ajaran islam</li>
 	<p>Allah ta’ala berfirman (artinya): <i>Dan kami wajibkan kepada manusia untuk (berbuat ) baik kepada kedua orang tuanya. Namun keduanya memaksamu untuk (berbuat syirik) mempersekutukan Aku dengan sesuatu yang tidak ada pengetahuanmu tentang itu, maka janganlah kamu menaatinya.</i> (QS. al-Ankabut[29]:8)</p>
-	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda: “<i>Tidak boleh taat dalam kemaksiatan, taat itu hanya boleh dalam kebaikan.</i>” (HR. Al-Bukhari:6830)</p>
+	<br>Rasulullah shallallahu ‘alaihi wa sallam bersabda: “<i>Tidak boleh taat dalam kemaksiatan, taat itu hanya boleh dalam kebaikan.</i>” (HR. Al-Bukhari:6830)
 	<li>Merendahkan diri di hadapan orang tua</li>
 	<p>Allah ta’ala brfirman (artinya): <i>Dan rendahkanlah dirimu terhadap mereka berdua dengan penuh kesayangan dan ucapkanlah:”Wahai Rabbku, kasihilah mereka berdua sebagaimana mereka telah mendidik aku waktu kecil.</i>” (QS. al-Isra’[17]:24)</p>
 	<li>Bertutur kata lemah lembut kepada orang tua, terutama saat mereka telah lanjut usia</li>
@@ -107,11 +107,11 @@
 	</blockquote>
 	<li>Membantunya ketika butuh bantuan</li>
 	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Barangsiapa yang membantu saudaranya yang membutuhkan maka Allah akan membantunya. Dan barangsiapa yang melepaskan kesulitan saudaranya, maka Allah akan melepaskan kesulitannya pada hari kiamat kelak.</i>”(HR. al-BukhariL2442 dan Muslim:2580)</p>
-	<i>Mengingatkannya ketika salah</i>
+	<li>Mengingatkannya ketika salah</li>
 	<p>Allah subhanahu wa ta’ala berfirman (artinya): <i>Dan orang-orang yang beriman, lelaki dan permpuan, sebagian mereka (adalah) menjadi penolong bagi sebagian yang lain. Mereka menyuruh (mengerjakan) yang ma’ruf dan mencegah dari yang mungkar.</i>(QS. At-Tubah[9]:71)</p>
-	<i>Menutupi aibnya dan tidak membuka rahasianya</i>
+	<li>Menutupi aibnya dan tidak membuka rahasianya</li>
 	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Barangsiapa menutupi aib seseorang mukmin, maka Allah akan menutupi aibnya di dunia dan di akhirat.</i>”(HR. Ibnu Majah:2544, Shahihah Ibnu Majah:2062)</p>
-	<i>Menunaikan enam haknya yang wajib</i>
+	<li>Menunaikan enam haknya yang wajib</li>
 	<p>Rasulullah shallallahu ‘alaihi wa sallam bersabda (artinya): “<i>Hak muslim atas muslim yang lain ada enam.” Ada yang bertanya, ‘Apa sajakan itu, wahai Rasululla?’ Beliau menjawab, “(1) Bila kamu bertemu dengannya maka ucapkanlah salam kepadanya, (2) bila ia mengundangmu maka penuhilah, (3) bila ia meminta nasihat kepadamu maka berilah ia nasihat, (4) bila ia bersin lalu mengucapkan ‘Alhamdulillah’ maka ucapkanlah ‘yarhamukallah’, (5) bila ia sakit maka jenguklah, (6) dan bila ia meninggal maka antarlah jenazahnya.</i>”(HR. Muslim: 2162)[.]</p>
 </ol>
 <h3><span id="etika_seorang_guru">Etika seorang guru atau orang yang berilmu</span></h3>
@@ -155,6 +155,9 @@
 
 <h3>Sumber :</h3>
 <p>Majelis Ilmu publisher – dikoreksi oleh: Ustadz Arif Fathul Ulum</p>
+
+<p>Jika kalian ingin bertanya, saya <a
+    href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
 
 </div>
 
