fixed-nd on corent post on article dir salaf

--- a/salaf/etika-pergaulan-islam/index.html
+++ b/salaf/etika-pergaulan-islam/index.html
@@ -54,8 +54,8 @@
 <h3><span id="etika_kepada_orang_tua">Etika Kepada Orang Tua</span></h3>
 <ol type="a">
 	<li>Mentaati semua perintahnya selama tidak bertentangan dengan ajaran islam</li>
-	<p>Allah ta’ala berfirman (artinya): <i>Dan kami wajibkan kepada manusia untuk (berbuat ) baik kepada kedua orang tuanya. Namun keduanya memaksamu untuk (berbuat syirik) mempersekutukan Aku dengan sesuatu yang tidak ada pengetahuanmu tentang itu, maka janganlah kamu menaatinya.</i> (QS. al-Ankabut[29]:8)</p>
-	<br>Rasulullah shallallahu ‘alaihi wa sallam bersabda: “<i>Tidak boleh taat dalam kemaksiatan, taat itu hanya boleh dalam kebaikan.</i>” (HR. Al-Bukhari:6830)
+	<p>Allah ta’ala berfirman (artinya): <i>Dan kami wajibkan kepada manusia untuk (berbuat ) baik kepada kedua orang tuanya. Namun keduanya memaksamu untuk (berbuat syirik) mempersekutukan Aku dengan sesuatu yang tidak ada pengetahuanmu tentang itu, maka janganlah kamu menaatinya.</i> (QS. al-Ankabut[29]:8)
+	<br>Rasulullah shallallahu ‘alaihi wa sallam bersabda: “<i>Tidak boleh taat dalam kemaksiatan, taat itu hanya boleh dalam kebaikan.</i>” (HR. Al-Bukhari:6830)</p>
 	<li>Merendahkan diri di hadapan orang tua</li>
 	<p>Allah ta’ala brfirman (artinya): <i>Dan rendahkanlah dirimu terhadap mereka berdua dengan penuh kesayangan dan ucapkanlah:”Wahai Rabbku, kasihilah mereka berdua sebagaimana mereka telah mendidik aku waktu kecil.</i>” (QS. al-Isra’[17]:24)</p>
 	<li>Bertutur kata lemah lembut kepada orang tua, terutama saat mereka telah lanjut usia</li>
@@ -151,7 +151,7 @@
 </ol>
 
 <h3>Catatan Penulis</h3>
-<p>Bukan bermaksud guru ingin dihormati bukan, akan tetapi yang demikian itu perintah agama, seandainya kalian berat melakukan ini paling tidak kalian itu memiliki adab kepada semua manusia, agama ini bukan sekedar memerintahkan untuk memiliki etika kepada guru, akan tetapi agama ini memerintah kepada seorang muslim itu memiliki etika kepada orang tua, guru, teman, tetangga, dan semua manusia, dan ini merupakan bentuk untuk meraih sifat tawadhu' dan meraih faedah ilmu yang luas.<br>Masih banyak etika atau adab yang belum di sertakan dalam artikel ini seperti etika bergaul dengan tetangga, etika istri bergaul dengan suaminya, etika suami bergaul dengan dengan istrinya, etika seorang pemimpin, etika seorang pegawai, dan etika bergaul dengan pembantu atau pekerja.</p>
+<p>Bukan bermaksud guru ingin dihormati bukan, akan tetapi yang demikian itu perintah agama, seandainya kalian berat melakukan ini paling tidak kalian itu memiliki adab kepada semua manusia, agama ini bukan sekedar memerintahkan untuk memiliki etika kepada guru, akan tetapi agama ini memerintah kepada seorang muslim itu memiliki etika kepada orang tua, guru, teman, tetangga, dan semua manusia, dan ini merupakan bentuk untuk meraih sifat tawadhu' dan meraih faedah ilmu yang luas.<br><br>Masih banyak etika atau adab yang belum di sertakan dalam artikel ini seperti etika bergaul dengan tetangga, etika istri bergaul dengan suaminya, etika suami bergaul dengan dengan istrinya, etika seorang pemimpin, etika seorang pegawai, dan etika bergaul dengan pembantu atau pekerja.</p>
 
 <h3>Sumber :</h3>
 <p>Majelis Ilmu publisher – dikoreksi oleh: Ustadz Arif Fathul Ulum</p>
