fixed curent post

--- a/tugas/membangun-voip-server/index.html
+++ b/tugas/membangun-voip-server/index.html
@@ -91,9 +91,9 @@
 	<p>Pada dasarnya pengkodean suara merupakan pengalihan <i>code analog</i> menjadi <i>code digital</i> agar suara dapat dikirim dalam jaringan komputer, yang dikenal dengan istilah <i>codec</i>.  Berbagai jenis dikembangkan untuk mengompresikan suara agar dapat menggunakan <i>bandwith</i> secara hemat tanpa mengorbankan kualitas suara. 
 	Daftar <i>codec</i> yang banyak digunakan :</p>
 	<ol>
-		<li><b>GSM</b><pre>      : </pre>13Kbps (full rate), 20ms frame size</li>
-		<li><b>iLBC</b><pre>     : </pre>14 Kbps, 20ms frame size, 13,3Kbps, 30ms frame size</li>
-		<li><b>ITU G.729</b><pre>: </pre>8Kbps, 10ms frame size versi proprietary []</li>
+		<li><b>GSM</b>: 13Kbps (full rate), 20ms frame size</li>
+		<li><b>iLBC</b>: 14 Kbps, 20ms frame size, 13,3Kbps, 30ms frame size</li>
+		<li><b>ITU G.729</b>: 8Kbps, 10ms frame size versi proprietary []</li>
 	</ol>
 
 </ol>
