Edited Aboute me-Ability and voip server

--- a/tugas/membangun-voip-server/index.html
+++ b/tugas/membangun-voip-server/index.html
@@ -105,7 +105,7 @@
 <p>Kebutuhan <i>Hardware</i>, secara umum kebutuhan <i>hardware</i> dapat merujuk pada <i>topologi</i> jaringan yang dibangun, perlu ada penambahan headset pada masing – masing <i>user agent</i>.</p>
 <p>Kebutuhan <i>Software</i>, <b>Server-Side</b>, <b>Sistem Operasi</b> : <i>Linux Debian 7 wheezy</i>, <b>Softswitch</b> : <i>Asterisk</i>, dan <i>codec</i>-nya: <i>GSM</i>. <i>Client-Side</i>, <b>Sistem Operasi</b> : <i>Windows</i>, <b>Softphone</b>: <i>idefisk</i> ataupun <i>X-Lite</i>.</p>
 <p>Panduan Instalasi dan Konfigurasi <i>VoIP Server</i>,</p>
-<p>Tunggu Masih Dalam Proses</p>
+<p style="text-align:center;"><a href="/files/panduan_membangun_voip_server.pdf"><img src="/img/pdf.png" alt=""></a><br><a href="/files/panduan_membangun_voip_server.pdf">panduan_membangun_voip_server.pdf</a></p>
 <h3>Sumber :</h3>
 <p><b>Winarno, Sugeng</b>. 2008, <i>Membangun Telephone berbasis VoIP</i>, Penerbit INFORMATIKA:Bandung.</p>
 
