--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
 <h2>Akademi</h2>
 <p>Sedang menempuh S1 di Universitas Nusantara PGRI Kediri, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
 <h2>Ability</h2>
-<p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="classroom-smkti.github.io">Class Room SMKTI</a></p>
+<p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
 <h2>Minat</h2>
 <p>Computer Science, Mathematics, Networking, Automotif, and Electronics.</p>
 <h2>Contact</h2>
