--- a/tugas/uts-susulan-jaringan-dasar/index.html
+++ b/tugas/uts-susulan-jaringan-dasar/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>Tugas Konfigurasi Matheboard &raquo; saifulindo</title>
+		<title>UTS Susualan Jaringan Dasar &raquo; saifulindo</title>
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
@@ -47,32 +47,23 @@
 		<div id="main">
 			<div id="post">
 
-<h1>Tugas Konfigurasi Motherboard</h1>
-<p id="permalink" class="print-only">http://saifulindo.github.io/tugas/tugas-konfigurasi-matheboard/</p>
-<p class="no-print created_at dateline">Updated: <span class="reldate">Nov 28, 2014</span></p><p class="print-only created_at dateline">Updated: <span>Nov 28, 2014</span></p>
+<h1>UTS Susulan Jaringan Dasar</h1>
+<p id="permalink" class="print-only">http://saifulindo.github.io/tugas/uts-susulan-jaringan-dasar/</p>
+<p class="no-print created_at dateline">Published: <span class="reldate">Nov 28, 2014</span></p><p class="print-only created_at dateline">Published: <span>Nov 28, 2014</span></p>
 
 <h3>Petunjuk</h3>
 <ul>
-  <li>Sumber Bacaan file .pptx <code>Tata Letak Komputer.pptx</code> dan Buku <code>1-C2-Perakitan Komputer-X-1.pdf</code></li>
-  <li>Tugas Kelompok, dengan jumlah anggota empat – enam anak.</li>
-  <li>Setiap Kelompok memilih salah satu soal untuk dikerjakan dan antar kelompok tidak boleh mengerjakan soal yang sama.</li>
-  <li>Buat laporan dari tugas kalian kemudian dikumpulkan dalam format Power Point.</li>
+  <li>Sumber Bacaan file <code>.pptx</code> yang telah di catat atau di copy, dan Buku <code>7-C2-Jaringan Dasar-X-1.pdf</code> yang telah di copy-kan atau kalau belum punya silahkan mengcopy ke <b>pak. Saiful</b>.</li>
+  <li>Buat laporan dari tugas kalian kemudian dikumpulkan dalam format word.</li>
   <li>File dikirim ke email <b>saifulindo@guruku.my.id</b>, paling lambat tanggal : Des 6, 2014.</li>
 </ul>
-<h3>Soal Uraian</h3>
-<ul>
-  <li>Sebutkan dan jelaskan kegunaan jumper pada motherboard ....</li>
-  <li>Jelaskan kegunaan jumper master, slave, dan cable selected pada gambar di bawah ini :</li><br>
-  <p style="text-align:center;"><img src="/img/2014/10/jumper_device.jpg" alt="Jumper Device"></p>
-  <li>Jelaskan fungsi Front Panel dan kegunaan Power SW, Reset SW, HDD LED, Power LED .....</li><br>
-  <p style="text-align:center;"><img src="/img/2014/10/f_panel.jpg" alt="Front Panel"></p>
-  <li>Sebutkan Alasan mengapa perlu melakukan Clear_CMOS, serta jelaskan cara melakukan Clear-CMOS .....</li><br>
-  <p style="text-align:center;"><img src="/img/2014/10/clrcmos.jpg" alt="Clear CMOS"></p>
-  <li>ROM terdapat ada tiga yaitu EPROM, EEPROM, dan Flash ROM Jelaskan perbedaanya, serta BIOS model Sekarang di tanamkan di ROM yang mana dan apa alasannya .....</li>
-  <li>Jawablah pertanyaan berikut :<br>Apa perbedaan CD-ROM dan DVD ROM ?<br>Apa itu Clock Sircle pada Prosessor ?<br>Apa fungsi Jumper ?<br>Apa fungsi Speaker pada Front Panel Matheboar ?<br>Sebutkan Nama – nama Port Rear Panel ?</li>
+<h3>Perintah Susulan</h3>
+<lo type="1">
+   <li>Carilah gambar di internet tentang topologi jaringan yang kamu merasa paham dengan topologi jaringan tersebut.!</li>
+   <li>Sebutkan macam - macam topologi jaringan komputer serta maksudnya.!</li>
+   <li>Jelaskan cara kerja perpindahan data antar komputer berdasarkan tujuh layer OSI !</li>
+   <li>Rangkumlah Informasi dari internet tentang jaringan komputer, yang kamu telah pahami betul</li>
 </ul>
-<h3>Catatan </h3>
-<p>Jaga Kekompakan, Kerja sama yang baik, Tanggung Jawab,dan  Toleransi Terhadap Teman. Anak-anak yang baik itu yang berbakti kepada orang tua.</p>
 
 <p>Jika kalian ingin bertanya, saya <a
     href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
