fixed-rt curent post

--- a/tugas/uts-susulan-jaringan-dasar/index.html
+++ b/tugas/uts-susulan-jaringan-dasar/index.html
@@ -58,12 +58,12 @@
   <li>File dikirim ke email <b>saifulindo@guruku.my.id</b>, paling lambat tanggal : Des 6, 2014.</li>
 </ul>
 <h3>Perintah Susulan</h3>
-<lo type="1">
+<ol type="1">
    <li>Carilah gambar di internet tentang topologi jaringan yang kamu merasa paham dengan topologi jaringan tersebut.!</li>
    <li>Sebutkan macam - macam topologi jaringan komputer serta maksudnya.!</li>
    <li>Jelaskan cara kerja perpindahan data antar komputer berdasarkan tujuh layer OSI !</li>
    <li>Rangkumlah Informasi dari internet tentang jaringan komputer, yang kamu telah pahami betul</li>
-</lo>
+</ol>
 
 <p>Jika kalian ingin bertanya, saya <a
     href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
