Fixed curent post

--- a/tugas/kisi-kisi-uas/index.html
+++ b/tugas/kisi-kisi-uas/index.html
@@ -49,25 +49,25 @@
 
 <h1>Kisi - kisi UAS</h1>
 <p id="permalink" class="print-only">http://saifulindo.github.io/tugas/kisi-kisi-uas/</p>
-<p class="no-print created_at dateline">Published: <span class="reldate">Des 02, 2014</span></p><p class="print-only created_at dateline">Published: <span>Des 02, 2014</span></p>
+<p class="no-print created_at dateline">Published: <span class="reldate">Dec 02, 2014</span></p><p class="print-only created_at dateline">Published: <span>Dec 02, 2014</span></p>
 
 <p>Belajar yang rajin dan banyak berdoa, kalau ada waktu baca ini <a href="/salaf/antara-adab-dan-ilmu/">antara adab dan ilmu</a>, kewajiban kalian menjadi anak itu berbakti kepada orang tua, bagaiamanapun keadaan mereka (orang tua), bahagiakanlah mereka dengan kemampuan terbaikmu. Sebenarnya dilubuk hati orang tua itu yang ditanyakan bukanlah berapa nilai kalian, tetapi sebarapa pahamkah kalian tentang pelajaran tersebut.</p>
 <h3>Konfigurasi Wide Area Network</h3>
 <ul>
   <h4>Secara Umum :</h4>
-  <li>Soal diambil dari materi yang telah disampaikan dikelas, serta pelajari file <code>.pptx</code> dan <code>.pdf</code>yang telah diberikan.</li>
+  <li>Soal diambil dari materi yang telah disampaikan dikelas, serta pelajari file <code>.pptx</code> dan <code>.pdf</code> yang telah diberikan.</li>
   <table>
   	<tr>
-  		<td style="text-align:center;"><a href="/tugas/files/Modul-TKJ-15-menginstalasi_perangkat_jaringan_berbasis_luas_(wan).pdf"><img src="/img/pdf.png" alt=""></a><br><a href="/tugas/files/Modul-TKJ-15-menginstalasi_perangkat_jaringan_berbasis_luas_(wan).pdf">Modul-TKJ-15-menginstalasi_perangkat_jaringan_berbasis_luas_(wan).pdf</a></td>
+  		<td style="text-align:center;"><a href="/tugas/files/Modul-TKJ-15-menginstalasi_perangkat_jaringan_berbasis_luas_(wan).pdf"><img src="/img/pdf.png" alt=""></a><br><a href="/tugas/files/Modul-TKJ-15-menginstalasi_perangkat_jaringan_berbasis_luas_(wan).pdf">Modul-TKJ-15</a></td>
   		<td style="text-align:center;">
   			<a href="/tugas/files/Modul-TKJ-16-mendiagnosis_permasalahan_perangkat_yang_tersambung_jaringan_berbasis_luas_(wan).pdf"><img src="/img/pdf.png" alt=""></a><br>
-  			<a href="/tugas/files/Modul-TKJ-16-mendiagnosis_permasalahan_perangkat_yang_tersambung_jaringan_berbasis_luas_(wan).pdf">Modul-TKJ-16-mendiagnosis_permasalahan_perangkat_yang_tersambung_jaringan_berbasis_luas_(wan).pdf</a></td>
+  			<a href="/tugas/files/Modul-TKJ-16-mendiagnosis_permasalahan_perangkat_yang_tersambung_jaringan_berbasis_luas_(wan).pdf">Modul-TKJ-16</a></td>
   		<td style="text-align:center;">
   			<a href="/tugas/files/materi-power-point-kwan.zip"><img src="/img/zip.png" alt=""></a><br>
   			<a href="/tugas/files/materi-power-point-kwan.zip">materi-power-point-kwan.zip</a></td>
   	</tr>
   </table>
-  <li>Baca juga <a href="/posts/client-bridge-on-engenius">Client Bridge on EnGenius</a> dan download kisi - kisi <a href="/tugas/files/kisi-kisi-ujian-praktek-kwan.pdf">Ujian Praktik</a></li>
+  <li>Baca juga <a href="/posts/client-bridge-on-engenius">Client Bridge on EnGenius</a> dan download kisi - kisi <a href="/tugas/files/kisi-kisi-ujian-praktek-kwan.pdf">Ujian Praktik</a></li><br>
   <h4>Secara Spesifik pelajari :</h4>
   <li>tentang TCP/IP, Subnetting dan DHCP Server, serta aturan instalasi linux </a></li>
   <li>Konfigurasi <i>hyperterminal</i> dan perintah pada <i>router Cisco</i>, materi ini ada di modul TKJ 15</li>
