--- a/tugas/membangun-voip-server/index.html
+++ b/tugas/membangun-voip-server/index.html
@@ -112,6 +112,8 @@
 <p>Jika kalian ingin bertanya, saya <a
     href="http://twitter.com/saifulindo">@saifulindo</a> ada di Twitter.</p>
 </div>
+<div id="disqus_thread"></div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 		</div>
 		<div id="footer">
@@ -121,7 +123,18 @@
             </p>
 		</div>
 
-		
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'voipserver';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+	
 		
 		<script type="text/javascript"> 
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
