--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
@@ -74,7 +73,7 @@
 		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 		</script> 
 		<script type="text/javascript"> 
-		var pageTracker = _gat._getTracker("UA-7780973-1");
+		var pageTracker = _gat._getTracker("");
 		pageTracker._initData();
 		pageTracker._trackPageview();
 		</script>
@@ -89,7 +88,7 @@
             t.type  = 'text/javascript';
             t.async = true;
             t.id    = 'gauges-tracker';
-            t.setAttribute('data-site-id', '50693215613f5d378200002c');
+            t.setAttribute('data-site-id', '');
             t.src = '//secure.gaug.es/track.js';
             var s = document.getElementsByTagName('script')[0];
             s.parentNode.insertBefore(t, s);
