alhamdulillah lulus kuliah

--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
 <p><img src="/img/saifulindo.png" class="center thin-bordered" alt=""/></p>
 <p>Pernah menjadi teknisi di Asnet Multimedia sekitar tiga sampai empat tahun, kemudian menjadi pengajar bidang teknologi informasi sejak agustus 2013 sampai sekarang.</p>
 <h2>Akademi</h2>
-<p>Sedang menempuh S1 di Universitas Nusantara PGRI Kediri, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
+<p>Lulus S1 di Universitas Nusantara PGRI Kediri di wisuda tanggal 30 juli 2015, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
 <h2>Minat</h2>
