Edit Source project at aboute

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
 <p>Lulus S1 di Universitas Nusantara PGRI Kediri di wisuda tanggal 30 juli 2015, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
 <h2>Projects</h2>
 <ul>
-	<li>Blog Belajar Linux: <a href="https://github.com/saifulindo/belajar-linux/tree/gh-pages">source</a>, <a href="http://saifulindo.github.io/belajar-linux/">Blog</a></li>
+	<li>Blog Belajar Linux: <a href="https://github.com/saifulindo/belajar-linux/tree/gh-pages">Source</a>, <a href="http://saifulindo.github.io/belajar-linux/">Blog</a></li>
 </ul>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
