Menabah link Catatan Komputer

--- a/about/index.html
+++ b/about/index.html
@@ -58,6 +58,7 @@
 <ul>
 	<li>Blog Belajar Linux: <a href="https://github.com/saifulindo/belajar-linux/tree/gh-pages">Source</a>, <a href="http://saifulindo.github.io/belajar-linux/">Blog</a></li>
 	<li>Artikel Ilmiah: Merancang Git Server dengan Pendekatan GitHub Social Coding dalam Peningkatan Pembelajaran Mahasiswa <a href="http://simki.unpkediri.ac.id/mahasiswa/file_artikel/2015/09.1.03.02.0299.pdf">Download</a></li>
+	<li>Catatan Komputer Saya: <a href="http://saifulindo.github.io/myblog/">Link</a> </a?</li>
 </ul>
 <h2>Ability</h2>
 <p>Linux Server Operating System seperti: ClearOS, Debian, dan Ubuntu. Networking seperti: Git Server, VoIP Server, dan Nating. Web Building seperti, <a href="http://ppn.unpkediri.ac.id">UKM PPN</a>, <a href="http://classroom-smkti.github.io">Class Room SMKTI</a></p>
