--- a/tugas/index.html
+++ b/tugas/index.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">blog</span></a></h1>
+			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">github.io</span></a></h1>
 			<ul>
                 <li id="home" ><a href="/">Home</a></li>
                 <li id="posts" ><a href="/posts/">Posts</a></li>
