--- a/salaf/bahagiakan-aku-dengan-keindahan-akhlakmu/index.html
+++ b/salaf/bahagiakan-aku-dengan-keindahan-akhlakmu/index.html
@@ -46,11 +46,10 @@
 		</div>
 		<div id="main">
 			<div id="post">
-
 <h1>Bahagiakan Aku dengan Keindahan Akhlakmu</h1>
-<p>Disusun oleh: Ustadz Abu Aniisah Syahrul Fatwa bin Lukman, Hafidzahullah</p>
 <p id="permalink" class="print-only">http://saifulindo.github.io/salaf/bahagiakan-aku-dengan-keindahan-akhlakmu/</p>
-<p class="no-print created_at dateline">Published: <span class="reldate">Des 01, 2016</span></p><p class="print-only created_at dateline">Published: <span>Des 01, 2016</span></p>
+<p class="no-print created_at dateline">Published: <span class="reldate">Dec 01, 2016</span></p><p class="print-only created_at dateline">Published: <span>Dec 01, 2016</span></p>
+<p>Disusun oleh: Ustadz Abu Aniisah Syahrul Fatwa bin Lukman, Hafidzahullah</p>
 
 <h3>SUAMI ISTRI WAJIB BERGAUL DENGAN BAIK</h3>
 <p>Pasangan suami istri wajib berinteraksi dengan baik antara satu sama lain. Allah subhanahhu wa ta'ala berfirman:</p>
@@ -62,6 +61,7 @@
 <blockquote>
 <p>Al-Imam Ibnu Katsir mengatakan, “Baguskanlah ucapan kalian kepada para istri, baguskan pula perbuatan dan penampilanmu menurut kemampuan, sebagaimana hal itu wajib bagi istri.”[1]</p>
 <p>Jika setiap pasangan mampu mewujudkan hal ini, maka kebahagianlah yang akan didapat kehidupan rumah tangga menjadi penuh dengan ketentraman dan kedaimaian</p>
+
 <h3>AKHLAK KUNCI KEBAHAGIAN</h3>
 <p>Akhlak adalah barometer kebaikan seseorang. Sebab, akhlak adalah gambaran agama dan iman. Al-Imam Ibnul Qayyim berkata, "Agama ini seluruhnya adalah akhlak; barang siapa memperbaiki akhlaknya maka baik pula agamanya."[2]</p>
 <p>Sebaliknya, ketidakpedulian seseorang akan masalah akhlak merupakan indikasi akan kelemahan agama dan keimanannya. Al-Imam Fudhail bin Iyadh mengatakan, "Barang siapa jelek akhlaknya maka jelek pula agamanya."[3]</p>
@@ -73,6 +73,7 @@
 	<p>“Orang mukmin yang paling sempurna imannya adalah yang paling baik akhlaknya. Dan sebaik-baik kalian adalah yang paling baik akhlaknya kepadda istrinya.”[4]
 	</p>
 </blockquote>
+
 <h3>AKHLAK SUAMI YANG MEMBAHAGIAKAN ISTRI</h3>
 <ol type="1">
 	<li>Menasihatkan Kebaikan</li>
