--- a/salaf/bahagiakan-aku-dengan-keindahan-akhlakmu/index.html
+++ b/salaf/bahagiakan-aku-dengan-keindahan-akhlakmu/index.html
@@ -55,10 +55,10 @@
 <p>Pasangan suami istri wajib berinteraksi dengan baik antara satu sama lain. Allah subhanahhu wa ta'ala berfirman:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >وَعَا شِرُوهُنَّ بِاٌلْمَعْرُوفِ</div></p>
-	<p>“Dan bergaullah dengan mereka secara patut. (QS an-Nisa’ [4]:19)”
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >وَعَا شِرُوهُنَّ بِاٌلْمَعْرُوفِ</div>
 </p>
-<blockquote>
+<p>“Dan bergaullah dengan mereka secara patut. (QS an-Nisa’ [4]:19)”</p>
+</blockquote>
 <p>Al-Imam Ibnu Katsir mengatakan, “Baguskanlah ucapan kalian kepada para istri, baguskan pula perbuatan dan penampilanmu menurut kemampuan, sebagaimana hal itu wajib bagi istri.”[1]</p>
 <p>Jika setiap pasangan mampu mewujudkan hal ini, maka kebahagianlah yang akan didapat kehidupan rumah tangga menjadi penuh dengan ketentraman dan kedaimaian</p>
 
